# script

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  Makefile  README.md  main.py  pyproject.toml  requirements.txt
basic/: net_tools.py
basic/net_tool/: netstat.py
basic/net_tool/client/: tcp.py
basic/net_tool/server/: tcp.py
basic/shell/: IpRange.sh
metasploit/: ssh_kegen.py
socket/: main.py  netstat.py
socket/client/: tcp.py
socket/server/: tcp.py
