[tool.commitizen]
name = "cz_conventional_commits"
tag_format = "$version"
version_type = "semver"
version = "0.1.1"
update_changelog_on_bump = true
major_version_zero = true
version_files = [
    "pyproject.toml:version",
    "__init__.py"
]

[tool.poetry]
name = "script"
version = "0.1.0"
description = ""
authors = ["Sunny Tsai <windasunny011725@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
click = "^8.1.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
